# openapi_server/models/__init__.py
@@ -4,6 +4,9 @@
 from __future__ import absolute_import
 # import models into model package
 from openapi_server.models.batch import Batch
+from openapi_server.models.ground_truth_result import GroundTruthResult
 from openapi_server.models.model import Model
 from openapi_server.models.model_class import ModelClass
+from openapi_server.models.prediction_result import PredictionResult
+from openapi_server.models.status import Status
 from openapi_server.models.validation_result import ValidationResult
