# openapi_server/models/ground_truth_result.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class GroundTruthResult(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, ground_truth=None):  # noqa: E501
+        """GroundTruthResult - a model defined in OpenAPI
+
+        :param ground_truth: The ground_truth of this GroundTruthResult.  # noqa: E501
+        :type ground_truth: int
+        """
+        self.openapi_types = {
+            'ground_truth': int
+        }
+
+        self.attribute_map = {
+            'ground_truth': 'ground_truth'
+        }
+
+        self._ground_truth = ground_truth
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'GroundTruthResult':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The GroundTruthResult of this GroundTruthResult.  # noqa: E501
+        :rtype: GroundTruthResult
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def ground_truth(self):
+        """Gets the ground_truth of this GroundTruthResult.
+
+
+        :return: The ground_truth of this GroundTruthResult.
+        :rtype: int
+        """
+        return self._ground_truth
+
+    @ground_truth.setter
+    def ground_truth(self, ground_truth):
+        """Sets the ground_truth of this GroundTruthResult.
+
+
+        :param ground_truth: The ground_truth of this GroundTruthResult.
+        :type ground_truth: int
+        """
+
+        self._ground_truth = ground_truth
